# BitQuant

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  cli.py  main.py  pyproject.toml  requirements.txt  sample-payload.json  skills-lock.json  test_search_token.py  test_swap_processing.py
agent/: __init__.py  agent.py  agent_executor.py  agent_executors.py  alphasense_agent.py  defi_agent.py  main.py  og_alphasense_tools.py  prompts.py  telemetry.py  test_og_alphasense_tools.py  test_prompts.py  tools.py  x402.py
api/: api_types.py  simple_client.py
api_types/: types.py
bftypes/: types.py
client/: client.py
defi/: binance_tools.py  defi_metrics.py  defillama.py  defillama_source.py  defillama_tools.py  example_defillama.py  stats.py  test_binance.py  test_defi.py  test_plugins.py  types.py
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
onchain/: README.md  chains.py  test_chains.py
plugins/: defi_metrics.py  plugin.py  registry.py  test_plugins.py  types.py
scripts/: import_smoke_test.py  users.csv  whitelist.sh
server/: __init__.py  activity_tracker.py  auth.py  config.py  cow_validator.py  dynamodb_helpers.py  evm_transaction_validator.py  fastapi_server.py  firebase.py  invitecode.py  jup_validator.py  llm_usage.py  logging.py  main.py  metrics.py  middleware.py  migrate_points.py  opg_token_gate.py  points.py  server.py  service.py  swap_tracker.py  test_cow_debug.py  test_cow_validator.py  test_jup_validator.py  test_server.py  test_utils.py  types.py  utils.py  whitelist.py
static/: Makefile  add.sh  coingecko_id_mappings.txt  coingecko_ids.csv  tokenlist.json  whitelist.json  whitelist.txt
strategies/: max_yield.py  registry.py  strategy.py  test_strategies.py
subnet/: api_types.py  evaluation_prompt.txt  subnet_methods.py  (+1 more)
(+86 files in other folders)
