[project]
name = "two-ligma"
version = "0.1.0"
description = "OpenGradient TwoLigma"
requires-python = ">=3.8"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
exclude = [
    'venv/',  # Exclude venv directory
    '.venv/',  # Common alternative venv directory name
]

[[tool.mypy.overrides]]
module = [
    "opengradient",
    "opengradient.mltools",
    "opengradient.llm"
]
ignore_missing_imports = true