[project]
name = "bitquant"
version = "0.1.0"
description = "OpenGradient BitQuant"
requires-python = ">=3.9"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true
exclude = [
    'venv/',  # Exclude venv directory
    '.venv/',  # Common alternative venv directory name
]

[tool.uv]
exclude-newer = "7d"

[[tool.mypy.overrides]]
module = [
    "opengradient",
    "opengradient.mltools",
    "opengradient.llm",
    "defillama",
    "langchain_mcp_adapters.*",
    "boto3",
    "boto3.*",
    "aioboto3",
]
ignore_missing_imports = true